# Yand

./: .gitignore  ADVANCED_FEATURES.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  COMPLETION_REPORT.txt  IMPROVEMENTS.md  README.md  SUMMARY.md  USAGE_EXAMPLES.md  build_improved_project.sh  quick_build.sh
restored_code/: ANALYSIS.md  STRUCTURE.md  SUMMARY.txt
restored_code/dex1/: summary.txt
restored_code/dex1/gatewayprotocol/v1/: OperativeEventRequestKt.java  OperativeEventRequestKtKt.java  OperativeEventRequestOuterClass.java  PiiKt.java  PiiKtKt.java  PiiOuterClass.java  PlacementKt.java  (+39 more)
restored_code/dex1/okhttp3/: f.java  h0.java  i0.java  w.java
restored_code/dex1/okio/: j0.java  l0.java
restored_code/dex1/retrofit2/: b.java  c.java  d.java
restored_code/dex2/: summary.txt
restored_code/dex2/kotlin/: b0.java  d.java  d0.java  f.java  f0.java  i.java  i0.java  l0.java  n.java  p.java  w.java  x.java
restored_code/dex2/okhttp3/: s.java  u.java  y.java  z.java
restored_code/dex2/okio/: a0.java  b0.java  c.java  d.java  d0.java  e.java  e0.java  f.java  f0.java  g.java  i.java  i0.java  k0.java  m.java  n.java  o.java  o0.java  p.java  q.java  r.java  s.java  t.java  u.java  v.java  w.java
restored_code/dex2/retrofit2/: a.java  c0.java  g.java  i.java  m.java  p.java  s.java
restored_code/native/: CMakeLists.txt
restored_code/native/include/: advanced_bypass.h  signature_killer.h  xhook.h
restored_code/native/src/: advanced_bypass.cpp  signature_killer.cpp
итог/: CHANGELOG.md  INSTALLATION.md  README.md  TECHNICAL_SPECS.md  classes9.dex  verify.sh
(+4584 files in other folders)
